--- a/api/hadith/models/Hadith.settings.json
+++ b/api/hadith/models/Hadith.settings.json
@@ -14,15 +14,17 @@
     "hadith_en": {
       "type": "text"
     },
-    "hadithbooks": {
-      "collection": "hadithbook",
-      "via": "hadiths"
-    },
     "hadith_bn": {
       "type": "text"
     },
     "hadith_ar": {
       "type": "text"
+    },
+    "hadithbook": {
+      "model": "hadithbook"
+    },
+    "category": {
+      "model": "category"
     }
   }
 }
